little bit of cleanup in ART related code improve bottom-up algorithms for finding nodes in ART
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@750 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c